--- a/css/custom.css
+++ b/css/custom.css
@@ -14,6 +14,10 @@ body {
     padding: 0.5rem 1rem;
 }
 
+.nav-pills .nav-link.active {
+    background-color: #001CCC;
+}
+
 a {
     color: #001CCC;
     text-decoration: none;
@@ -68,10 +72,46 @@ a {
 }
 
 .lead {
-    color: white;
-    font-weight:400; 
+    color:white;
+    font-weight:400;
 }
 .overview-container .row {
     padding: 3%;
 }
 
+.card-body {
+    background-color: #FFFCE8;
+    border: none;
+}
+
+h2 {
+    font-weight: 400;
+}
+
+h4 {
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 1rem;
+    color: #001CCC;
+}
+
+.col p {
+    padding-right: 8%;
+    font-weight: 400;
+}
+
+
+.light-colored {
+    background-color: #FFFCE8;
+}
+
+.light-colored h1 {
+    color:#001CCC;
+    text-align: center;
+}
+
+.light-colored .lead {
+    color:#303A36;
+    text-align: center;
+
+}
